--- a/strategy/basis_spread.yaml
+++ b/strategy/basis_spread.yaml
@@ -20,79 +20,79 @@ data:
     obj_field: wind_code
     obj_content: TA.CZC
     commodity: TA
-    fields: [OPEN, CLOSE]
+    fields: [OPEN, CLOSE, HIGH, LOW]
 
   -
     obj_field: wind_code
     obj_content: L.DCE
     commodity: L
-    fields: [OPEN, CLOSE]
+    fields: [OPEN, CLOSE, HIGH, LOW]
 
   -
     obj_field: wind_code
     obj_content: MA.CZC
     commodity: MA
-    fields: [OPEN, CLOSE]
+    fields: [OPEN, CLOSE, HIGH, LOW]
 
   -
     obj_field: wind_code
     obj_content: RB.SHF
     commodity: RB
-    fields: [OPEN, CLOSE]
+    fields: [OPEN, CLOSE, HIGH, LOW]
 
   -
     obj_field: wind_code
     obj_content: J.DCE
     commodity: J
-    fields: [OPEN, CLOSE]
+    fields: [OPEN, CLOSE, HIGH, LOW]
 
   -
     obj_field: wind_code
     obj_content: JM.DCE
     commodity: JM
-    fields: [OPEN, CLOSE]
+    fields: [OPEN, CLOSE, HIGH, LOW]
 
   -
     obj_field: wind_code
     obj_content: HC.SHF
     commodity: HC
-    fields: [OPEN, CLOSE]
+    fields: [OPEN, CLOSE, HIGH, LOW]
 
   -
     obj_field: wind_code
     obj_content: BU.SHF
     commodity: BU
-    fields: [OPEN, CLOSE]
+    fields: [OPEN, CLOSE, HIGH, LOW]
 
   -
     obj_field: wind_code
     obj_content: ZC.CZC
     commodity: ZC
-    fields: [OPEN, CLOSE]
+    fields: [OPEN, CLOSE, HIGH, LOW]
 
   -
     obj_field: wind_code
     obj_content: I.DCE
     commodity: I
-    fields: [OPEN, CLOSE]
+    fields: [OPEN, CLOSE, HIGH, LOW]
 
   -
     obj_field: wind_code
     obj_content: PP.DCE
     commodity: PP
-    fields: [OPEN, CLOSE]
+    fields: [OPEN, CLOSE, HIGH, LOW]
 
   -
     obj_field: wind_code
     obj_content: V.DCE
     commodity: V
-    fields: [OPEN, CLOSE]
+    fields: [OPEN, CLOSE, HIGH, LOW]
 
   -
     obj_field: wind_code
     obj_content: EG.DCE
     commodity: EG
-    fields: [OPEN, CLOSE]
+    fields: [OPEN, CLOSE, HIGH, LOW]
 
 
   -
