--- a/lib/data/config.yaml
+++ b/lib/data/config.yaml
@@ -14,7 +14,7 @@ collection:
 #  - Information
 #  - FuturesMinMD
 #  - FuturesMD
-  - SpotMD
+#  - SpotMD
 #  - EDB
 #  - ICEPrice
 #  - DateDB
@@ -51,46 +51,46 @@ FuturesMinMD:
 
 
 FuturesMD:
-#  -
-#    source: WIND
-#    frequency: daily
-#    func: getFutureGroupPriceFromWind
-#    alldaytrade: 0
-#    cmd:
-#      - L.DCE
-#      - PP.DCE
-#      - I.DCE
-#      - J.DCE
-#      - JM.DCE
-#      - M.DCE
-#      - C.DCE
-#      - RB.SHF
-#      - BU.SHF
-#      - RU.SHF
-#      - NI.SHF
-#      - HC.SHF
-#      - TA.CZC
-#      - MA.CZC
-#      - AP.CZC
-#      - ZC.CZC
-#      - SR.CZC
-#      - RM.CZC
-#      - SC.INE
-#      - EG.DCE
-#      - SP.SHF
-#      - FG.CZC
-#      - V.DCE
-#      - CU.SHF
-#      - AL.SHF
-#      - AG.SHF
-#      - FU.SHF
-#
-#  -
-#    source: WIND
-#    frequency: daily
-#    func: getFutureGroupPriceFromWind
-#    alldaytrade: 1
-#    cmd: [B.IPE, LB.CME, NG.NYM]
+  -
+    source: WIND
+    frequency: daily
+    func: getFutureGroupPriceFromWind
+    alldaytrade: 0
+    cmd:
+      - L.DCE
+      - PP.DCE
+      - I.DCE
+      - J.DCE
+      - JM.DCE
+      - M.DCE
+      - C.DCE
+      - RB.SHF
+      - BU.SHF
+      - RU.SHF
+      - NI.SHF
+      - HC.SHF
+      - TA.CZC
+      - MA.CZC
+      - AP.CZC
+      - ZC.CZC
+      - SR.CZC
+      - RM.CZC
+      - SC.INE
+      - EG.DCE
+      - SP.SHF
+      - FG.CZC
+      - V.DCE
+      - CU.SHF
+      - AL.SHF
+      - AG.SHF
+      - FU.SHF
+
+  -
+    source: WIND
+    frequency: daily
+    func: getFutureGroupPriceFromWind
+    alldaytrade: 1
+    cmd: [B.IPE, LB.CME, NG.NYM]
 
   -
     source: ThomsonReuters
@@ -108,53 +108,53 @@ FuturesMD:
 
 SpotMD:
 
-#  -
-#    source: WIND
-#    func: getEDBFromWind
-#    frequency: daily
-#    unit: 元/吨
-#    cmd: S0033227
-#    edb_name: "价格:螺纹钢:HRB400 20mm:上海"
-#
-#  -
-#    source: WIND
-#    func: getEDBFromWind
-#    frequency: daily
-#    unit: 元/吨
-#    cmd: S5704863
-#    edb_name: "价格:热轧板卷:Q235B:4.75mm:杭州"
-#
-#  -
-#    source: WIND
-#    func: getEDBFromWind
-#    frequency: daily
-#    unit: 元/吨
-#    cmd: S5118197
-#    edb_name: "天津港:平仓价(含税):一级冶金焦(A<12.5%,<0.65%S,CSR>65%,Mt8%):山西产"
-#
-#  -
-#    source: WIND
-#    func: getEDBFromWind
-#    frequency: daily
-#    unit: 元/湿吨
-#    cmd: S0174655
-#    edb_name: "车板价:青岛港:澳大利亚:PB粉矿:61.5%"
-#
-#  -
-#    source: WIND
-#    func: getEDBFromWind
-#    frequency: daily
-#    unit: 元/吨
-#    cmd: S5112223
-#    edb_name: "天津港:库提价(含税):主焦煤(A<8%,V28%,0.8%S,G95,Y20mm):澳大利亚产"
-#
-#  -
-#    source: WIND
-#    func: getEDBFromWind
-#    frequency: daily
-#    unit: 元/吨
-#    cmd: S5101377
-#    edb_name: "秦皇岛港:平仓价:动力末煤(Q5500):山西产"
+  -
+    source: WIND
+    func: getEDBFromWind
+    frequency: daily
+    unit: 元/吨
+    cmd: S0033227
+    edb_name: "价格:螺纹钢:HRB400 20mm:上海"
+
+  -
+    source: WIND
+    func: getEDBFromWind
+    frequency: daily
+    unit: 元/吨
+    cmd: S5704863
+    edb_name: "价格:热轧板卷:Q235B:4.75mm:杭州"
+
+  -
+    source: WIND
+    func: getEDBFromWind
+    frequency: daily
+    unit: 元/吨
+    cmd: S5118197
+    edb_name: "天津港:平仓价(含税):一级冶金焦(A<12.5%,<0.65%S,CSR>65%,Mt8%):山西产"
+
+  -
+    source: WIND
+    func: getEDBFromWind
+    frequency: daily
+    unit: 元/湿吨
+    cmd: S0174655
+    edb_name: "车板价:青岛港:澳大利亚:PB粉矿:61.5%"
+
+  -
+    source: WIND
+    func: getEDBFromWind
+    frequency: daily
+    unit: 元/吨
+    cmd: S5112223
+    edb_name: "天津港:库提价(含税):主焦煤(A<8%,V28%,0.8%S,G95,Y20mm):澳大利亚产"
+
+  -
+    source: WIND
+    func: getEDBFromWind
+    frequency: daily
+    unit: 元/吨
+    cmd: S5101377
+    edb_name: "秦皇岛港:平仓价:动力末煤(Q5500):山西产"
 
   -
     source: WIND
@@ -181,69 +181,69 @@ SpotMD:
     type: spot
     cmd: [FO380-SIN]
 
-#  -
-#    source: ManualInput
-#    func: getDataFromCSV
-#    frequency: daily
-#    cmd: LL神华煤化工价格
-#    unit: 元/吨
-#    field: price
-#    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\LL.csv"
-#
-#  -
-#    source: ManualInput
-#    func: getDataFromCSV
-#    frequency: daily
-#    cmd: 甲醇华东（江苏地区）
-#    unit: 元/吨
-#    field: price
-#    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\MA.csv"
-#
-#  -
-#    source: ManualInput
-#    func: getDataFromCSV
-#    frequency: daily
-#    cmd: PP华东现货价
-#    unit: 元/吨
-#    field: price
-#    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\PP.csv"
-#
-#  -
-#    source: ManualInput
-#    func: getDataFromCSV
-#    frequency: daily
-#    cmd: TA内盘人民币价
-#    unit: 元/吨
-#    field: price
-#    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\PTA.csv"
-#
-#  -
-#    source: ManualInput
-#    func: getDataFromCSV
-#    frequency: daily
-#    cmd: 现货（常州sg-5低端价）
-#    unit: 元/吨
-#    field: price
-#    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\PVC.csv"
-#
-#  -
-#    source: ManualInput
-#    func: getDataFromCSV
-#    frequency: daily
-#    cmd: 国产重交-山东
-#    unit: 元/吨
-#    field: price
-#    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\沥青.csv"
-#
-#
-#  - source: ManualInput
-#    func: getDataFromCSV
-#    frequency: daily
-#    cmd: MEG
-#    area: 华东主港
-#    unit: 元/吨
-#    field: price
-#    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\MEG.csv"
+  -
+    source: ManualInput
+    func: getDataFromCSV
+    frequency: daily
+    cmd: LL神华煤化工价格
+    unit: 元/吨
+    field: price
+    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\LL.csv"
+
+  -
+    source: ManualInput
+    func: getDataFromCSV
+    frequency: daily
+    cmd: 甲醇华东（江苏地区）
+    unit: 元/吨
+    field: price
+    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\MA.csv"
+
+  -
+    source: ManualInput
+    func: getDataFromCSV
+    frequency: daily
+    cmd: PP华东现货价
+    unit: 元/吨
+    field: price
+    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\PP.csv"
+
+  -
+    source: ManualInput
+    func: getDataFromCSV
+    frequency: daily
+    cmd: TA内盘人民币价
+    unit: 元/吨
+    field: price
+    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\PTA.csv"
+
+  -
+    source: ManualInput
+    func: getDataFromCSV
+    frequency: daily
+    cmd: 现货（常州sg-5低端价）
+    unit: 元/吨
+    field: price
+    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\PVC.csv"
+
+  -
+    source: ManualInput
+    func: getDataFromCSV
+    frequency: daily
+    cmd: 国产重交-山东
+    unit: 元/吨
+    field: price
+    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\沥青.csv"
+
+
+  - source: ManualInput
+    func: getDataFromCSV
+    frequency: daily
+    cmd: MEG
+    area: 华东主港
+    unit: 元/吨
+    field: price
+    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\MEG.csv"
 
 #  - source: ManualInput
 #    func: getDataFromCSV
@@ -253,7 +253,7 @@ SpotMD:
 #    unit: 美元/吨
 #    field: price
 #    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\supplement_db\\PX.csv"
-#
+
 #  - source: ManualInput
 #    func: getDataFromCSV
 #    frequency: daily
@@ -514,6 +514,16 @@ Inventory:
     unit: 万吨
     field: inventory
     path: "E:\\CBNB\\BackTestSystem\\lib\\data\\inventory_db\\RB.csv"
+
+  -
+    source: ManualInput
+    func: getDataFromCSV
+    frequency: weekly
+    cmd: BU
+    area: 山东炼厂库存率
+    unit: "%"
+    field: inventory
+    path: "E:\\CBNB\\BackTestSystem\\lib\\data\\inventory_db\\BU.csv"
 
   -
     source: ThomsonReuters
