--- a/strategy/fac_bt.yaml
+++ b/strategy/fac_bt.yaml
@@ -11,6 +11,9 @@ capital: 1e8
 backtest_mode: OPEN  # 回测方式，CLOSE为以当天收盘价交易, OPEN为以第二天开盘价交易
 
 date_type: SHSE
+switch_contract: 1
+turnover: 1
+tcost: 0
 
 data:
 
@@ -19,174 +22,174 @@ data:
     obj_field: wind_code
     obj_content: TA.CZC
     commodity: TA
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, VOLUME, OI, HIGH, LOW]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: L.DCE
     commodity: L
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, VOLUME, OI, HIGH, LOW]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: MA.CZC
     commodity: MA
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, VOLUME, OI, HIGH, LOW]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: RB.SHF
     commodity: RB
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, VOLUME, OI, HIGH, LOW]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: J.DCE
     commodity: J
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, VOLUME, OI, HIGH, LOW]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: JM.DCE
     commodity: JM
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, VOLUME, OI, HIGH, LOW]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: HC.SHF
     commodity: HC
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, VOLUME, OI, HIGH, LOW]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: BU.SHF
     commodity: BU
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, VOLUME, OI, HIGH, LOW]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: ZC.CZC
     commodity: ZC
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, VOLUME, OI, HIGH, LOW]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: I.DCE
     commodity: I
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, VOLUME, OI, HIGH, LOW]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: PP.DCE
     commodity: PP
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, VOLUME, OI, HIGH, LOW]
 
   -
     collection: FuturesMD
     obj_field: wind_code
     obj_content: V.DCE
     commodity: V
-    fields: [OPEN, CLOSE, VOLUME, OI]
+    fields: [OPEN, CLOSE, VOLUME, OI, HIGH, LOW]
 
-  - collection: FuturesMD
-    obj_field: wind_code
-    obj_content: AP.CZC
-    commodity: AP
-    fields: [OPEN, CLOSE, VOLUME, OI]
-
-  -
-    collection: FuturesMD
-    obj_field: wind_code
-    obj_content: SR.CZC
-    commodity: SR
-    fields: [OPEN, CLOSE, VOLUME, OI]
-
-  -
-    collection: FuturesMD
-    obj_field: wind_code
-    obj_content: CU.SHF
-    commodity: CU
-    fields: [OPEN, CLOSE, VOLUME, OI]
-
-  -
-    collection: FuturesMD
-    obj_field: wind_code
-    obj_content: AL.SHF
-    commodity: AL
-    fields: [OPEN, CLOSE, VOLUME, OI]
-
-  -
-    collection: FuturesMD
-    obj_field: wind_code
-    obj_content: RU.SHF
-    commodity: RU
-    fields: [OPEN, CLOSE, VOLUME, OI]
-
-  -
-    collection: FuturesMD
-    obj_field: wind_code
-    obj_content: AG.SHF
-    commodity: AG
-    fields: [OPEN, CLOSE, VOLUME, OI]
-
-  -
-    collection: FuturesMD
-    obj_field: wind_code
-    obj_content: RM.CZC
-    commodity: RM
-    fields: [OPEN, CLOSE, VOLUME, OI]
-
-  -
-    collection: FuturesMD
-    obj_field: wind_code
-    obj_content: NI.SHF
-    commodity: NI
-    fields: [OPEN, CLOSE, VOLUME, OI]
-
-  -
-    collection: FuturesMD
-    obj_field: wind_code
-    obj_content: C.DCE
-    commodity: C
-    fields: [OPEN, CLOSE, VOLUME, OI]
-
-  -
-    collection: FuturesMD
-    obj_field: wind_code
-    obj_content: SC.INE
-    commodity: SC
-    fields: [OPEN, CLOSE, VOLUME, OI]
-
-  -
-    collection: FuturesMD
-    obj_field: wind_code
-    obj_content: FU.SHF
-    commodity: FU
-    fields: [OPEN, CLOSE, VOLUME, OI]
-
-  -
-    collection: FuturesMD
-    obj_field: wind_code
-    obj_content: M.DCE
-    commodity: M
-    fields: [OPEN, CLOSE, VOLUME, OI]
-
-  -
-    collection: FuturesMD
-    obj_field: wind_code
-    obj_content: FG.CZC
-    commodity: FG
-    fields: [OPEN, CLOSE, VOLUME, OI]
+#  - collection: FuturesMD
+#    obj_field: wind_code
+#    obj_content: AP.CZC
+#    commodity: AP
+#    fields: [OPEN, CLOSE, VOLUME, OI]
+#
+#  -
+#    collection: FuturesMD
+#    obj_field: wind_code
+#    obj_content: SR.CZC
+#    commodity: SR
+#    fields: [OPEN, CLOSE, VOLUME, OI]
+#
+#  -
+#    collection: FuturesMD
+#    obj_field: wind_code
+#    obj_content: CU.SHF
+#    commodity: CU
+#    fields: [OPEN, CLOSE, VOLUME, OI]
+#
+#  -
+#    collection: FuturesMD
+#    obj_field: wind_code
+#    obj_content: AL.SHF
+#    commodity: AL
+#    fields: [OPEN, CLOSE, VOLUME, OI]
+#
+#  -
+#    collection: FuturesMD
+#    obj_field: wind_code
+#    obj_content: RU.SHF
+#    commodity: RU
+#    fields: [OPEN, CLOSE, VOLUME, OI]
+#
+#  -
+#    collection: FuturesMD
+#    obj_field: wind_code
+#    obj_content: AG.SHF
+#    commodity: AG
+#    fields: [OPEN, CLOSE, VOLUME, OI]
+#
+#  -
+#    collection: FuturesMD
+#    obj_field: wind_code
+#    obj_content: RM.CZC
+#    commodity: RM
+#    fields: [OPEN, CLOSE, VOLUME, OI]
+#
+#  -
+#    collection: FuturesMD
+#    obj_field: wind_code
+#    obj_content: NI.SHF
+#    commodity: NI
+#    fields: [OPEN, CLOSE, VOLUME, OI]
+#
+#  -
+#    collection: FuturesMD
+#    obj_field: wind_code
+#    obj_content: C.DCE
+#    commodity: C
+#    fields: [OPEN, CLOSE, VOLUME, OI]
+#
+#  -
+#    collection: FuturesMD
+#    obj_field: wind_code
+#    obj_content: SC.INE
+#    commodity: SC
+#    fields: [OPEN, CLOSE, VOLUME, OI]
+#
+#  -
+#    collection: FuturesMD
+#    obj_field: wind_code
+#    obj_content: FU.SHF
+#    commodity: FU
+#    fields: [OPEN, CLOSE, VOLUME, OI]
+#
+#  -
+#    collection: FuturesMD
+#    obj_field: wind_code
+#    obj_content: M.DCE
+#    commodity: M
+#    fields: [OPEN, CLOSE, VOLUME, OI]
+#
+#  -
+#    collection: FuturesMD
+#    obj_field: wind_code
+#    obj_content: FG.CZC
+#    commodity: FG
+#    fields: [OPEN, CLOSE, VOLUME, OI]
 
 
 #  -
@@ -340,8 +343,6 @@ margin_ratio:
   BU.SHF_MC_LastMonthEnd: 0.07
   V.DCE_MC_LastMonthEnd: 0.07
 
-
-tcost: 0
 
 tcost_list:
   TA.CZC:
